# server-news

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  news_info.json
scrap/: Cargo.toml
scrap/src/: lib.rs  scrap.rs
server/: Cargo.toml
server/src/: main.rs
server/static/css/: news.css
sql/: Cargo.toml
sql/migrations/2024-04-16-073947_create_news/: up.sql
sql/migrations/2024-05-21-042039_create_news/: up.sql
sql/src/: lib.rs  models.rs  schema.rs
templates/: home-base.html.tera  home.html.tera  search.html.tera
